@@ -95,7 +95,7 @@ end_define
 
 begin_enum
 enum|enum
-DECL|enum|__anon2bb7dc7a0103
+DECL|enum|__anon2a2bb1ea0103
 block|{
 DECL|enumerator|PROP_0
 name|PROP_0
@@ -165,6 +165,18 @@ name|PROP_DEFAULT_VIEW
 block|,
 DECL|enumerator|PROP_DEFAULT_FULLSCREEN_VIEW
 name|PROP_DEFAULT_FULLSCREEN_VIEW
+block|,
+DECL|enumerator|PROP_DEFAULT_SNAP_TO_GUIDES
+name|PROP_DEFAULT_SNAP_TO_GUIDES
+block|,
+DECL|enumerator|PROP_DEFAULT_SNAP_TO_GRID
+name|PROP_DEFAULT_SNAP_TO_GRID
+block|,
+DECL|enumerator|PROP_DEFAULT_SNAP_TO_CANVAS
+name|PROP_DEFAULT_SNAP_TO_CANVAS
+block|,
+DECL|enumerator|PROP_DEFAULT_SNAP_TO_PATH
+name|PROP_DEFAULT_SNAP_TO_PATH
 block|,
 DECL|enumerator|PROP_ACTIVATE_ON_FOCUS
 name|PROP_ACTIVATE_ON_FOCUS
@@ -700,6 +712,66 @@ argument_list|,
 name|GIMP_PARAM_STATIC_STRINGS
 operator||
 name|GIMP_CONFIG_PARAM_AGGREGATE
+argument_list|)
+expr_stmt|;
+name|GIMP_CONFIG_INSTALL_PROP_BOOLEAN
+argument_list|(
+name|object_class
+argument_list|,
+name|PROP_DEFAULT_SNAP_TO_GUIDES
+argument_list|,
+literal|"default-snap-to-guides"
+argument_list|,
+name|DEFAULT_SNAP_TO_GUIDES_BLURB
+argument_list|,
+name|TRUE
+argument_list|,
+name|GIMP_PARAM_STATIC_STRINGS
+argument_list|)
+expr_stmt|;
+name|GIMP_CONFIG_INSTALL_PROP_BOOLEAN
+argument_list|(
+name|object_class
+argument_list|,
+name|PROP_DEFAULT_SNAP_TO_GRID
+argument_list|,
+literal|"default-snap-to-grid"
+argument_list|,
+name|DEFAULT_SNAP_TO_GRID_BLURB
+argument_list|,
+name|FALSE
+argument_list|,
+name|GIMP_PARAM_STATIC_STRINGS
+argument_list|)
+expr_stmt|;
+name|GIMP_CONFIG_INSTALL_PROP_BOOLEAN
+argument_list|(
+name|object_class
+argument_list|,
+name|PROP_DEFAULT_SNAP_TO_CANVAS
+argument_list|,
+literal|"default-snap-to-canvas"
+argument_list|,
+name|DEFAULT_SNAP_TO_CANVAS_BLURB
+argument_list|,
+name|TRUE
+argument_list|,
+name|GIMP_PARAM_STATIC_STRINGS
+argument_list|)
+expr_stmt|;
+name|GIMP_CONFIG_INSTALL_PROP_BOOLEAN
+argument_list|(
+name|object_class
+argument_list|,
+name|PROP_DEFAULT_SNAP_TO_PATH
+argument_list|,
+literal|"default-snap-to-path"
+argument_list|,
+name|DEFAULT_SNAP_TO_PATH_BLURB
+argument_list|,
+name|FALSE
+argument_list|,
+name|GIMP_PARAM_STATIC_STRINGS
 argument_list|)
 expr_stmt|;
 name|GIMP_CONFIG_INSTALL_PROP_BOOLEAN
@@ -1281,6 +1353,58 @@ argument_list|)
 expr_stmt|;
 break|break;
 case|case
+name|PROP_DEFAULT_SNAP_TO_GUIDES
+case|:
+name|display_config
+operator|->
+name|default_snap_to_guides
+operator|=
+name|g_value_get_boolean
+argument_list|(
+name|value
+argument_list|)
+expr_stmt|;
+break|break;
+case|case
+name|PROP_DEFAULT_SNAP_TO_GRID
+case|:
+name|display_config
+operator|->
+name|default_snap_to_grid
+operator|=
+name|g_value_get_boolean
+argument_list|(
+name|value
+argument_list|)
+expr_stmt|;
+break|break;
+case|case
+name|PROP_DEFAULT_SNAP_TO_CANVAS
+case|:
+name|display_config
+operator|->
+name|default_snap_to_canvas
+operator|=
+name|g_value_get_boolean
+argument_list|(
+name|value
+argument_list|)
+expr_stmt|;
+break|break;
+case|case
+name|PROP_DEFAULT_SNAP_TO_PATH
+case|:
+name|display_config
+operator|->
+name|default_snap_to_path
+operator|=
+name|g_value_get_boolean
+argument_list|(
+name|value
+argument_list|)
+expr_stmt|;
+break|break;
+case|case
 name|PROP_ACTIVATE_ON_FOCUS
 case|:
 name|display_config
@@ -1671,6 +1795,58 @@ argument_list|,
 name|display_config
 operator|->
 name|default_fullscreen_view
+argument_list|)
+expr_stmt|;
+break|break;
+case|case
+name|PROP_DEFAULT_SNAP_TO_GUIDES
+case|:
+name|g_value_set_boolean
+argument_list|(
+name|value
+argument_list|,
+name|display_config
+operator|->
+name|default_snap_to_guides
+argument_list|)
+expr_stmt|;
+break|break;
+case|case
+name|PROP_DEFAULT_SNAP_TO_GRID
+case|:
+name|g_value_set_boolean
+argument_list|(
+name|value
+argument_list|,
+name|display_config
+operator|->
+name|default_snap_to_grid
+argument_list|)
+expr_stmt|;
+break|break;
+case|case
+name|PROP_DEFAULT_SNAP_TO_CANVAS
+case|:
+name|g_value_set_boolean
+argument_list|(
+name|value
+argument_list|,
+name|display_config
+operator|->
+name|default_snap_to_canvas
+argument_list|)
+expr_stmt|;
+break|break;
+case|case
+name|PROP_DEFAULT_SNAP_TO_PATH
+case|:
+name|g_value_set_boolean
+argument_list|(
+name|value
+argument_list|,
+name|display_config
+operator|->
+name|default_snap_to_path
 argument_list|)
 expr_stmt|;
 break|break;
