@@ -206,6 +206,22 @@ name|GimpDisplayOptions
 modifier|*
 name|default_fullscreen_view
 decl_stmt|;
+DECL|member|default_snap_to_guides
+name|gboolean
+name|default_snap_to_guides
+decl_stmt|;
+DECL|member|default_snap_to_grid
+name|gboolean
+name|default_snap_to_grid
+decl_stmt|;
+DECL|member|default_snap_to_canvas
+name|gboolean
+name|default_snap_to_canvas
+decl_stmt|;
+DECL|member|default_snap_to_path
+name|gboolean
+name|default_snap_to_path
+decl_stmt|;
 DECL|member|activate_on_focus
 name|gboolean
 name|activate_on_focus
