@@ -335,7 +335,7 @@ end_include
 
 begin_enum
 enum|enum
-DECL|enum|__anon2922e4eb0103
+DECL|enum|__anon27a0c4c50103
 block|{
 DECL|enumerator|PROP_0
 name|PROP_0
@@ -348,7 +348,7 @@ end_enum
 
 begin_enum
 enum|enum
-DECL|enum|__anon2922e4eb0203
+DECL|enum|__anon27a0c4c50203
 block|{
 DECL|enumerator|SCALED
 name|SCALED
@@ -3541,6 +3541,46 @@ argument_list|)
 argument_list|,
 literal|0
 argument_list|)
+expr_stmt|;
+name|shell
+operator|->
+name|snap_to_guides
+operator|=
+name|display
+operator|->
+name|config
+operator|->
+name|default_snap_to_guides
+expr_stmt|;
+name|shell
+operator|->
+name|snap_to_grid
+operator|=
+name|display
+operator|->
+name|config
+operator|->
+name|default_snap_to_grid
+expr_stmt|;
+name|shell
+operator|->
+name|snap_to_canvas
+operator|=
+name|display
+operator|->
+name|config
+operator|->
+name|default_snap_to_canvas
+expr_stmt|;
+name|shell
+operator|->
+name|snap_to_vectors
+operator|=
+name|display
+operator|->
+name|config
+operator|->
+name|default_snap_to_path
 expr_stmt|;
 name|screen
 operator|=
